--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pass Jenny</title>
-    <link rel="stylesheet" href="style.css" />
+    <script src="./assets/script.js"></script>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
+
   <body>
+
     <div class="wrapper">
+
       <header>
-        <h1>Password Generator</h1>
+        <h1>Protect Yrself</h1>
       </header>
+
       <div class="card">
+
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Let Genny create a password for you</h2>
         </div>
+
         <div class="card-body">
           <textarea
             readonly
@@ -24,11 +31,17 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+
+          <button id="copy"
+          class="btn">Copy Password</button>
         </div>
+
       </div>
+
     </div>
-    <script src="script.js"></script>
+
   </body>
 </html>
