--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pass Jenny</title>
+    <title>Pass Genny</title>
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
 
@@ -33,9 +33,6 @@
 
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-
-          <button id="copy"
-          class="btn">Copy Password</button>
         </div>
 
       </div>
